tests/basic/good/test18.pepa
// File: tests/good/test18.pepa
// Tests the basic array syntax.

r = 1.0;
s = 10.0;

P1 = (a, r).P2;
P2 = (b, s).P1; 

P1[3]


