tests/basic/bad/test40.pepa
% File: tests/bad/test40.pepa
% Transient component (P)
P = (a, r).P2;
P2 = (b, s).P2;
(P <> P)
